# fiasko_bro

./: .codeclimate.yml  .editorconfig  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  ast_helpers.py  code_helpers.py  code_validator.py  helpers.py  repository_info.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini  url_helpers.py  validator_helpers.py  validators.py
docs/source/: add_validators.rst  advanced_usage.rst  changelog.rst  conf.py  contributing.rst  index.rst  internationalization.rst  roadmap.rst  usage.rst  validators_info.rst
fiasko_bro/: __init__.py  ast_helpers.py  ast_nodes_validators.py  code_helpers.py  code_validator.py  config.py  defaults.py  file_helpers.py  i18n.py  repository_info.py  url_helpers.py  validator_helpers.py  validators.py
fiasko_bro/pre_validation_checks/: __init__.py  bom.py  encoding.py  files_len.py  repo_size.py
fiasko_bro/tokenized_validators/: __init__.py  tokenized_validators.py
fiasko_bro/utils/: __init__.py  ast_helpers.py  ast_nodes_validators.py  code_helpers.py  configparser_helpers.py  file_helpers.py  list_helpers.py
fiasko_bro/validators/: __init__.py  code_inclusion.py  comments.py  commits.py  encoding.py  files.py  imports.py  naming.py  other_languages.py  pythonic.py  readme.py  requirements.py  syntax.py
test_fixtures/encoding_repo/: file_with_win1251_encoding.py
test_fixtures/file_3_spaces_repo/: file_3_spaces.py
test_fixtures/general_repo/: bilingual_readme.md  changed_readme.md  complex_functions.py  file_with_exit_functions.py  (+31 more)
tests/: general_validator_tests.py  test_general_validators.py  utils.py
(+77 files in other folders)
