[metadata]
description-file = README.md

[compile_catalog]
domain = fiasko_bro
directory = fiasko_bro/locale

[extract_messages]
input_dirs = fiasko_bro
output_file = fiasko_bro/locale/fiasko_bro.pot

[pep8]
max-line-length = 100

[bdist_wheel]
universal=1

[fiasko_bro]
directories_to_skip=build,dist,test_fixtures
