[metadata]
name = Fiasko Bro
version = 0.0.1.1
description = Automatic code validator
long_description = The project validates for common pitfalls
keywords = static, code, analysis, code, quality
url = https://github.com/devmanorg/fiasko_bro
license = MIT
author = Ilya Lebedev
author_email = melevir@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Libraries :: Python Modules
python_requires = >=3.4

[compile_catalog]
domain = fiasko_bro
directory = fiasko_bro/locale

[extract_messages]
input_dirs = fiasko_bro
output_file = fiasko_bro/locale/fiasko_bro.pot

[pep8]
max-line-length = 100
ignore = W506,W503

[bdist_wheel]
universal=1

[fiasko_bro]
directories_to_skip=build,dist,test_fixtures,.pytest_cache,.git
